modal letter spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,7 @@ p {
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
+  letter-spacing: 0px;
 }
 
 .modal-content .wallpaper{
